--- a/src/styles.css
+++ b/src/styles.css
@@ -166,7 +166,7 @@ h1 {
 	right: 20px;
 	bottom: 20px;
 	max-width: 400px;
-	padding: 32px;
+	padding: 16px;
 	text-align: center;
 	animation: slideUp 750ms cubic-bezier(0, 0.72, 0.24, 1.02);
 	border-radius: 4px 4px 4px 4px;
@@ -252,4 +252,21 @@ h1 {
 
 	display: grid;
 	place-content: center;
+}
+
+/* Restart Button */
+.restart-btn {
+	position: fixed;
+	background: var(--color-gray-100);
+	border: none;
+	color: var(--color-gray-900);
+	font-weight: 700;
+	left: 20px;
+	bottom: 20px;
+	padding: 16px;
+	text-align: center;
+	animation: slideUp 750ms cubic-bezier(0, 0.72, 0.24, 1.02);
+	border-radius: 4px 4px 4px 4px;
+	will-change: transform;
+	outline-offset: 4px;
 }
